add test for multinode
Signed-off-by: Milind waykole <mwaykole@redat.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -36,6 +36,11 @@ markers =
     keda: Mark tests which are testing KEDA scaling
     llmd_cpu: Mark tests which are testing LLMD (LLM Deployment) with CPU resources
     llmd_gpu: Mark tests which are testing LLMD (LLM Deployment) with GPU resources
+    llmd_multinode: Mark tests which are testing LLMD multi-node deployments
+    llmd_prefill_decode: Mark tests which are testing LLMD prefill/decode disaggregated deployments
+    llmd_validation: Mark tests which are testing LLMD admission webhook validation
+    llmd_scheduler: Mark tests which are testing LLMD scheduler functionality
+    llmd_sriov: Mark tests which are testing LLMD with SR-IOV networking
 
     # Model Registry:
     custom_namespace: mark tests that are to be run with custom namespace
